--- a/_sections/contact.html
+++ b/_sections/contact.html
@@ -4,12 +4,9 @@ icon: fa-envelope
 order: 4
 ---
 
-<p>Elementum sem parturient nulla quam placerat viverra
-mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+<p>We have desgined this contact form solely for our users. If you are willing to contribute your ideas to this platform or you have any questions or want to know more about a specific event. Just let us know by contacting us</p>
 
-<form method="post" action="https://formspree.io/{{ site.email }}">
+<form method="post" action="https://formspree.io/{{ site.email }}" target="_blank">
   <div class="row">
     <div class="6u 12u$(mobile)"><input type="text" name="name" placeholder="Name" /></div>
     <div class="6u$ 12u$(mobile)"><input type="text" name="email" placeholder="Email" /></div>
