--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -1,9 +1,9 @@
 ---
-title: About Me
+title: Timeline of Military Intervention Against Isis
 icon: fa-user
 order: 3
 ---
 
-<a href="#" class="image featured"><img src="assets/images/pic08.jpg" alt="" /></a>
+<a href="#" class="image featured"><img src="assets/images/timeline.png" alt="" /></a>
 
-<p> We are a group of four people who have been assigned to complete this common core project.</p>
+<p></p>
