--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -1,5 +1,5 @@
 ---
-title: Timeline of Military Intervention Against Isis
+title: Timeline of Military Intervention Against ISIS
 icon: fa-user
 order: 3
 ---
