--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -1,11 +1,12 @@
 ---
 title: Intro
-cover-photo: assets/images/banner.jpg
+cover-photo: assets/images/ISIS logo.jpg
 cover-photo-alt: example cover photo
 auto-header: none
 icon: fa-comment
 order: 1
 ---
+<!--
 <header>
   <h2 class="alt">This is a <strong>Project's</strong> responsive site<br />
     designed for a meaningful purpose.</h2>
@@ -14,3 +15,4 @@ order: 1
 <footer>
   <a href="#portfolio" class="button scrolly">Let's Get Started</a>
 </footer>
+-->
