--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -1,7 +1,7 @@
 ---
 title: Intro
-cover-photo: assets/images/ISIS.jpg
-cover-photo-alt: example cover photo
+cover-photo: assets/images/ISISLogo.jpg
+cover-photo-alt: ISIS
 auto-header: none
 icon: fa-comment
 order: 1
