--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -6,7 +6,7 @@ auto-header: none
 icon: fa-comment
 order: 1
 ---
-
+<!--
 <header>
   <h2 class="alt">This is a <strong>Project's</strong> responsive site<br />
     designed for a meaningful purpose.</h2>
@@ -15,4 +15,11 @@ order: 1
 <footer>
   <a href="#portfolio" class="button scrolly">Let's Get Started</a>
 </footer>
+-->
+<header>
+  <h2 class="alt"></h2>
+</header>
 
+<footer>
+  <a href="#portfolio" class="button scrolly"></a>
+</footer>
