--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -17,9 +17,9 @@ order: 1
 </footer>
 -->
 <header>
-  <h2 class="alt">ISIS</h2>
+  <h2 class="alt">I<br>S</br></h2>
 </header>
 
 <footer>
-  <a href="#portfolio">Introduction</a>
+  <a href="#portfolio"></a>
 </footer>
