--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -17,9 +17,9 @@ order: 1
 </footer>
 -->
 <header>
-  <h2 class="alt">I<br>S</br></h2>
+  <h2 class="alt">Ideology<br>and<br>Conflict</br></br></h2>
 </header>
 
 <footer>
-  <a href="#portfolio"></a>
+  <a>Islamic State of Iraq and Syria</a>
 </footer>
