--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -17,9 +17,7 @@ order: 1
 </footer>
 -->
 <header>
-  <h2 class="alt">Ideology<br>and<br>Conflict</br></br></h2>
+  <h2 class="alt"><br><br><br>Ideology<br>and<br>Conflict</br></br></br></br></br></h2>
 </header>
 
-<footer>
-  <a>Islamic State of Iraq and Syria</a>
-</footer>
+
