--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -17,7 +17,7 @@ order: 1
 </footer>
 -->
 <header>
-  <h2 class="alt"><br><br><br>Ideology<br>and<br>Conflict</br></br></br></br></br></h2>
+  <p align="left">Ideology<br>and<br>Conflict</br></br></p>
 </header>
 
 
