--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -17,7 +17,7 @@ order: 1
 </footer>
 -->
 <header>
-  <p align="left">Ideology<br>and<br>Conflict</br></br></p>
+  <p align="left">I<br>a<br>C<br>f</br></br></br></p>
 </header>
 
 
