--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -10,13 +10,13 @@ order: 2
   <div class="row">
     <div class="4u 12u$(mobile)">
       <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic02.jpg' | relative_url }}" alt="Ipsum Feugiat" /></a>
+        <a href="#" class="image fit"><img src="{{ 'assets/images/pic1.jpg' | relative_url }}" alt="" /></a>
         <header>
           <h3>Ipsum Feugiat</h3>
         </header>
       </div>
       <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic03.jpg' | relative_url }}" alt="Rhoncus Semper" /></a>
+        <a href="#" class="image fit"><img src="{{ 'assets/images/pic2.jpg' | relative_url }}" alt="" /></a>
         <header>
           <h3>Rhoncus Semper</h3>
         </header>
@@ -24,13 +24,13 @@ order: 2
     </div>
     <div class="4u 12u$(mobile)">
       <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic04.jpg' | relative_url }}" alt="Magna Nullam" /></a>
+        <a href="#" class="image fit"><img src="{{ 'assets/images/pic3.jpg' | relative_url }}" alt="" /></a>
         <header>
           <h3>Magna Nullam</h3>
         </header>
       </div>
       <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic05.jpg' | relative_url }}" alt="Natoque Vitae" /></a>
+        <a href="#" class="image fit"><img src="{{ 'assets/images/pic4.jpg' | relative_url }}" alt="" /></a>
         <header>
           <h3>Natoque Vitae</h3>
         </header>
@@ -38,13 +38,13 @@ order: 2
     </div>
     <div class="4u 12u$(mobile)">
       <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic06.jpg' | relative_url }}" alt="Dolor Penatibus" /></a>
+        <a href="#" class="image fit"><img src="{{ 'assets/images/pic5.jpg' | relative_url }}" alt="" /></a>
         <header>
           <h3>Dolor Penatibus</h3>
         </header>
       </div>
       <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic07.jpg' | relative_url }}" alt="Orci Convallis" /></a>
+        <a href="#" class="image fit"><img src="{{ 'assets/images/pic6.jpg' | relative_url }}" alt="" /></a>
         <header>
           <h3>Orci Convallis</h3>
         </header>
