--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -1,5 +1,7 @@
 ---
 title: Timeline of Military Intervention Against ISIS
+cover-photo: assets/images/ISISLogo.jpg
+cover-photo-alt: ISIS
 icon: fa-bomb
 order: 3
 ---
