adding cover photo

--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -1,6 +1,6 @@
 ---
 title: Timeline of Military Intervention Against ISIS
-cover-photo: assets/images/ISISLogo.jpg
+cover-photo: assets/images/isiscars.jpg
 cover-photo-alt: ISIS
 icon: fa-bomb
 order: 3
