--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -6,7 +6,7 @@ icon: fa-th
 order: 2
 ---
 
-<p><font color="yellow"> There have been increasing conflicts between political, economic, racial & religious differences in a global scale. What these chaotic conflicts represent are simple: the primitive desire of one ideology to dominate the others. Thus, terrorism is one brutal, violent way to achieve the goal. This fits the main concept of the course perfectly.
+<p><font color="red"> There have been increasing conflicts between political, economic, racial & religious differences in a global scale. What these chaotic conflicts represent are simple: the primitive desire of one ideology to dominate the others. Thus, terrorism is one brutal, violent way to achieve the goal. This fits the main concept of the course perfectly.
      According to CNN, ISIS has organized 90 attacks in 21 countries, have killed nearly 1,400 people, for only the past 8 years. This is definitely worth looking into. By analyzing the ideology difference between ISIS and Modern Western world, we can gain incites of why religion can be so “additive” in driving & sustaining the conflict for a long period of time(raising awareness). We would also compare other factors that sustains the conflict, give justification(advocacy), and give suggestions on how to improve the situation(campaigning).</font></p>
 
   <div class="row">
