--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-cover-photo: assets/images/sniper.jpg
+cover-photo: assets/images/snip.jpg
 cover-photo-alt: ISIS
 icon: fa-th
 order: 2
