--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -6,6 +6,6 @@ icon: fa-bomb
 order: 3
 ---
 
-<a href="#" class="image featured"><img src="assets/images/timeline2.png" alt="" /></a>
+<a href="#" class="image featured"><img src="assets/images/timeline2.jpg" alt="" /></a>
 
 <p></p>
