--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -1,5 +1,5 @@
 ---
-title: Timeline of Military Intervention Against ISIS
+title:
 cover-photo: assets/images/isiscars.jpg
 cover-photo-alt: ISIS
 icon: fa-bomb
