--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -14,6 +14,8 @@ order: 2
 <p><span style="font-weight:bold"><font color="yellow">1. Gain insights of why religion can be so “additive” in driving & sustaining the conflict for a long period of time (raising awareness). </font></span></p>
 <p><span style="font-weight:bold"><font color="yellow">2. Explore other factors that sustains the conflict, give justification (advocacy), and give suggestions on how to improve the situation (campaigning).</font></span></p>
 
+<a href="#" class="image featured"><img src="assets/images/updatedpic.jpg" alt="" /></a>
+
 <p><span style="font-weight:bold"><font color="white">What is ISIS?</font></span></p>
 
 <p><span style="font-weight:bold"><font color="yellow">The <i>Islamic State of Iraq and the Levant</i> is an unrecognised state and a Sunni jihadist group active in Iraq and Syria. (Oriental Review, 2014) It is usually referred as a militant organization or an Islamist terror group by western media such as BBC, NBC, CNN etc. Apart from taking over huge part of Iraq and Northern Syria by military force, it has conducted or inspired numerous terror attacks outside Iraq and Syria which killed thousands of people and injured much more. </font></span></p>
