--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -37,7 +37,7 @@ order: 2
   <div class="row">
     <div class="4u 12u$(mobile)">
       <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic1.jpg' | relative_url }}" alt="" /></a>
+        <a href="#" class="image fit"><img src="{{ 'assets/images/pic1.jpg' | relative_url }}"/></a>
         <header>
           <h3></h3>
         </header>
