--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -17,7 +17,7 @@ order: 1
 </footer>
 -->
 <header>
-  <p align="left"><font color:"black">I<br>S<br>I<br>S</br></br></br></font></p>
+  <p align="left"><font color="black">I<br>S<br>I<br>S</br></br></br></font></p>
 </header>
 
 
