--- a/_sections/contact.html
+++ b/_sections/contact.html
@@ -6,7 +6,7 @@ icon: fa-envelope
 order: 4
 ---
 
-<p>We have desgined this contact form solely for our users. If you are willing to contribute your ideas to this platform or you have any questions or want to know more about a specific event. Just let us know by contacting us</p>
+<p>We have designed this contact form solely for our users. If you are willing to contribute your ideas to this platform or you have any questions or want to know more about a specific event. Just let us know by contacting us</p>
 
 <form method="post" action="https://formspree.io/{{ site.email }}" target="_blank">
   <div class="row">
