--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -9,7 +9,7 @@ order: 2
 <div style="text-align: justify"><p><span style="font-weight:bold"><font color="yellow"> There have been increasing conflicts between political, economic, racial and religious differences in a global scale. Behind these chaotic conflicts usually bares a simple: the primitive desire of one ideology to dominate the others. Thus, terrorism is one brutal, violent way to achieve the goal. This fits the main concept of the course perfectly. According to CNN, ISIS has organized 90 attacks in 21 countries, have killed nearly 1,400 people, for only the past 5 years. 
 </font></span></p></div>
 
-<p><span style="font-weight:bold"><font color="yellow">By analyzing the ideology difference between ISIS and Modern Western world, we can gain incites of why religion can be so “additive” in driving & sustaining the conflict for a long period of time(raising awareness). We would also compare other factors that sustains the conflict, give justification(advocacy), and give suggestions on how to improve the situation(campaigning).</font></span></p>
+<p><span style="font-weight:bold"><font color="yellow">By analyzing the ideology difference between ISIS and Modern Western world, we can:</font></span></p>
 
 <p><span style="font-weight:bold"><font color="yellow">1. Gain insights of why religion can be so “additive” in driving & sustaining the conflict for a long period of time (raising awareness). </font></span></p>
 <p><span style="font-weight:bold"><font color="yellow">2. Explore other factors that sustains the conflict, give justification (advocacy), and give suggestions on how to improve the situation (campaigning).</font></span></p>
